added header to base.html - including shopname link, search bar, profile dropdown menu and shopping basket

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -25,6 +25,9 @@
                     </h4>
                 </div>
             </div>
+            <!--
+                this is where caruosel will go when products have been sorted
+            -->
         </div>
     </div>
 {% endblock %}
