--- a/templates/base.html
+++ b/templates/base.html
@@ -97,8 +97,16 @@
                  </ul>
             </div> 
         </div>
+        <div class="row bg-danger">
+            <nav class="navbar navbar-expand-lg navbar-light w-100">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                {% include 'includes/mobile-header.html' %}
+                {% include 'includes/main-nav.html' %}
+            </nav>
+        </div>
     </header>
-
     {% if messages %}
         <div class="message-container"></div>
     {% endif %}
