added JS to sort products with setting dropdown. Added back to top link for users

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -52,6 +52,18 @@ body {
     border: 1px solid black !important;
 }
 
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+.btt-link {
+    cursor: pointer;
+}
+
 /* navbar for devices medium and larger */
 @media (min-width: 992px) {
     .fixed-top-desktop-only {
