--- a/products/templates/products/single_product_detail.html
+++ b/products/templates/products/single_product_detail.html
@@ -45,7 +45,7 @@
                         <small class="text-muted">No Rating</small>
                     {% endif %}
                     <p class="mt-3">{{ product.description }}</p>
-                    <form class="form" action="" method="POST">
+                    <form class="form" action="{% url 'add_item_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
                              {% with product.has_sizes as s %}
