--- a/templates/base.html
+++ b/templates/base.html
@@ -85,8 +85,8 @@
                             <div class="text-center">
                                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                                 <p class="my-0">
-                                    {% if grand_total %}
-                                        ${{ grand_total|floatformat:2 }}
+                                    {% if total %}
+                                        ${{ total|floatformat:2 }}
                                     {% else %}
                                         $0.00
                                     {% endif %}
