--- a/products/templates/products/single_product_detail.html
+++ b/products/templates/products/single_product_detail.html
@@ -112,3 +112,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'products/includes/quantity_script.html' %}
+{% endblock %}
