--- a/static/css/base.css
+++ b/static/css/base.css
@@ -66,6 +66,23 @@ body {
     cursor: pointer;
 }
 
+/* Toasts */
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
+
 /* navbar for devices medium and larger */
 @media (min-width: 992px) {
     .fixed-top-desktop-only {
