--- a/bag/templates/bag/shopping-bag.html
+++ b/bag/templates/bag/shopping-bag.html
@@ -104,7 +104,7 @@
                                         Keep Shopping!
                                     </span>
                                 </a>
-                                <a href="" class="btn btn-black rounded-0 btn-lg">
+                                <a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
                                     <span class="text-uppercase"> Continue to Secure Checkout</span>
                                     <span class="icon">
                                         <i class="fas fa-lock"></i>
