--- a/profiles/templates/profiles/user-profile.html
+++ b/profiles/templates/profiles/user-profile.html
@@ -25,6 +25,30 @@
                 <hr>
             </div>
         </div>
-        {{ profile }}
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <p class="text-muted">
+                    Default Delivery Information
+                </p>
+                <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button class="btn btn-black rounded-o text-uppercase float-right">
+                        Update Information
+                    </button>
+                </form>
+            </div>
+            <div class="col-12 col-lg-6">
+                <p class="text-muted">
+                    Order History
+                </p>
+                {{ orders }}
+            </div>
+        </div>
     </div>
+{% endblock %}
+
+{% block postloadjs %}
+        {{ block.super }}
+        <script type="text/javascript" src="{% static 'profiles/js/countries.js' %}"></script>
 {% endblock %}
