updated no image file

--- a/products/templates/products/single_product_detail.html
+++ b/products/templates/products/single_product_detail.html
@@ -23,7 +23,7 @@
                         </a>
                     {% else %}
                         <a href="">
-                            <img src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}" class="card-img img-fluid">
+                            <img src="{{ MEDIA_URL }}noimage.jpg" alt="{{ product.name }}" class="card-img img-fluid">
                         </a>
                     {% endif %}
                 </div>
