added edit and delete product buttons

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -84,6 +84,12 @@
                                             {% else %}
                                                 <small class="text-muted">No Rating</small>
                                             {% endif %}
+                                            {% if request.user.is_superuser %}
+                                                <small class="ml-3">
+                                                    <a href="{% url 'edit_a_product' product.id %}">Edit</a> |
+                                                    <a href="{% url 'delete_a_product' product.id %}" class="text-danger">Delete</a>
+                                                </small>
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
