--- a/products/templates/products/single_product_detail.html
+++ b/products/templates/products/single_product_detail.html
@@ -44,6 +44,12 @@
                     {% else %}
                         <small class="text-muted">No Rating</small>
                     {% endif %}
+                    {% if request.user.is_superuser %}
+                        <small class="ml-3">
+                            <a href="{% url 'edit_a_product' product.id %}">Edit</a> |
+                            <a href="{% url 'delete_a_product' product.id %}" class="text-danger">Delete</a>
+                        </small>
+                    {% endif %}
                     <p class="mt-3">{{ product.description }}</p>
                     <form class="form" action="{% url 'add_item_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
