--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block extra_title %}
+    Home Page
+{% endblock %}
+
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
