--- a/templates/includes/mobile-header.html
+++ b/templates/includes/mobile-header.html
@@ -41,12 +41,12 @@
     </div>
 </li>
 <li class="list-inline-item">
-    <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_shopping_bag' %}">
+    <a class="{% if total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_shopping_bag' %}">
         <div class="text-center">
             <div><i class="fas fa-shopping-bag fa-lg"></i></div>
             <p class="my-0">
-                {% if grand_total %}
-                    ${{ grand_total|floatformat:2 }}
+                {% if total %}
+                    ${{ total|floatformat:2 }}
                 {% else %}
                     $0.00
                 {% endif %}
