--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -72,7 +72,7 @@
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
                 <a href="{% url 'news' %}" class="dropdown-item">View All</a>
                 {% if user.is_superuser %}
-                    <a href="" class="dropdown-item">Add Entry</a>
+                    <a href="{% url 'add_news' %}" class="dropdown-item">Add Entry</a>
                 {% endif %}
             </div>
         </li>
