--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
 </head>
 <body>
 <header class="container-fluid fixed-top">
-    <div id="topnav" class="row bg-nav pt-lg-2 d-none d-lg-flex">
+    <div id="topnav" class="row bg-nav-top pt-lg-1 d-none d-lg-flex">
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
             <a href="{% url 'home' %}" class="nav-link main-logo-link">
                 <h2 class="logo-font text-black my-0">
@@ -48,9 +48,9 @@
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
             <form method="GET" action="{% url 'products' %}">
                 <div class="input-group w-100">
-                    <input class="form-control border border-black rounded-0" type="text" name="query" placeholder="Search...">
+                    <input class="form-control border border-black rounded-4" type="text" name="query" placeholder="Search...">
                     <div class="input-group-append">
-                        <button class="form-control btn btn-white border border-black rounded-0" type="submit">
+                        <button class="form-control btn btn-white border border-black rounded-4" type="submit">
                             <span class="icon">
                                 <i class="fas fa-search"></i>
                             </span>
@@ -109,7 +109,7 @@
             </ul>
         </div> 
     </div>
-    <div class="row bg-nav">
+    <div class="row bg-nav-bottom">
         <nav class="navbar navbar-expand-lg navbar-light w-100">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
