added author field

--- a/news/templates/news/news.html
+++ b/news/templates/news/news.html
@@ -35,6 +35,9 @@
         <p>
             {{ n.date }}
         </p>
+        <p>
+            {{ n.author }}
+        </p>
     </div>
     <hr>
 {% endfor %}
