--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -21,7 +21,7 @@
                     <div class="row">
                         <div class="col-3 my-1">
                            {% if item.product.image %}
-                                <img class="w-100" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                <img class="w-100" src="{{ item.product.image.url }}" alt="{{ product.name }}">
                             {% else %}
                                 <img class="w-100" src="{{ MEDIA_URL }}noimage.jpg" alt="{{ product.name }}">
                             {% endif %}
